// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subscription AfterTitle should display only the cancel action because the subscription is not cancelled 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="ui-buttongroup-group-fd03"
      style="display: flex;"
    >
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 actionButton ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
        id="action-button-1"
        type="button"
      >
        <i
          aria-hidden="true"
          class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
        >
          block
        </i>
        <span
          class="ui-button-content-cef1"
        >
          <span
            id="action-button-1-tooltip-target"
          />
          Cancel
        </span>
      </button>
    </div>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created
      : 
    </span>
    <span
      class="fieldValue"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper customer context should render custom link because it is set 1`] = `
<div>
  <a
    href="https://gorgias.io/asd1as2d3/"
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="ui-badge-badge-7025 mt-2 ui-badge-uppercase-7025"
      style="border-radius: 100px;"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper customer context should render default link because no custom link is set 1`] = `
<div>
  <a
    href="https://mystore-sp.admin.rechargeapps.com/merchant/subscriptions/789/details"
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="ui-badge-badge-7025 mt-2 ui-badge-uppercase-7025"
      style="border-radius: 100px;"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper should not render any link because no customer hash is available 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="ui-badge-badge-7025 mt-2 ui-badge-uppercase-7025"
      style="border-radius: 100px;"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper should not render any provided link when no customer hash is available 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="ui-badge-badge-7025 mt-2 ui-badge-uppercase-7025"
      style="border-radius: 100px;"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper ticket context should render custom link because it is set 1`] = `
<div>
  <a
    href="https://gorgias.io/asd1as2d3/"
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="ui-badge-badge-7025 mt-2 ui-badge-uppercase-7025"
      style="border-radius: 100px;"
    />
  </div>
</div>
`;

exports[`Subscription TitleWrapper ticket context should render default link because no custom link is set 1`] = `
<div>
  <a
    href="https://mystore-sp.admin.rechargeapps.com/merchant/subscriptions/789/details"
    rel="noopener noreferrer"
    target="_blank"
  />
  <div>
    <div
      class="ui-badge-badge-7025 mt-2 ui-badge-uppercase-7025"
      style="border-radius: 100px;"
    />
  </div>
</div>
`;
